Fixed style bugs on mobile Filter Annotations tab.

--- a/sites/all/themes/lacuna_stories/sass/components/annotator-touch.scss
+++ b/sites/all/themes/lacuna_stories/sass/components/annotator-touch.scss
@@ -452,6 +452,7 @@ padding: 0 10px 0 20px;
         width: $width;
 
         right: 0em;
+        transition: right .5s;
 
         &.hidden {
 
@@ -462,18 +463,21 @@ padding: 0 10px 0 20px;
         h2 {
 
             border-radius: 2px;
-            padding: 4px;
+            padding: 4px 20px;
             background-color: #eee;
             box-shadow: 0px -2px 2px gray;
-            padding-bottom: 15px;
             position: absolute;
             -webkit-transform: rotate(270deg);
             -moz-transform: rotate(270deg);
             -ms-transform: rotate(270deg);
             -o-transform: rotate(270deg);
-            width: 12em;
-            right: 6.3em;
+            transform: rotate(270deg);
+            font-size: 1.4em;
+            width: 11em !important;
             top: 6em;
+            right: 6.1em;
+            font-variant: normal;
+            text-transform: none;
 
         }
 
